1.排行榜奖励调整 2.ad作弊检测 3.挑战赛历史战绩
